--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -8,7 +8,8 @@ General reset
 /* Set default body */
 body {
   color: #5c6873;
-  font-family: "Roboto Condensed", sans-serif;
+  /*font-family: "Roboto Condensed", sans-serif;*/
+  font-family:'Microsoft YaHei','Open Sans','Helvetica Neue',Arial,'Hiragino Sans GB','WenQuanYi Micro Hei',sans-serif;
   padding: 0px !important;
   margin: 0px !important;
   font-weight: 300;
